--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,14 @@
     <dimen name="sp_12">12sp</dimen>
     <dimen name="sp_10">10sp</dimen>
     <dimen name="dp_22">22dp</dimen>
+    <dimen name="dp_2">2dp</dimen>
+    <dimen name="dp_140">140dp</dimen>
+    <dimen name="dp_80">80dp</dimen>
+    <dimen name="dp_15">15dp</dimen>
+    <dimen name="sp_15">15sp</dimen>
+    <dimen name="dp_295">295dp</dimen>
+    <dimen name="dp_50">50dp</dimen>
+    <dimen name="dp_1">1dp</dimen>
+    <dimen name="dp_55">55dp</dimen>
+    <dimen name="dp_120">120dp</dimen>
 </resources>
