--- a/lib_common/src/main/res/values/attrs.xml
+++ b/lib_common/src/main/res/values/attrs.xml
@@ -122,4 +122,25 @@
         <item name="title_text_size_with_subTitle">16sp</item>
         <item name="subTitle_text_color">#717882</item>
     </style>
+
+    <declare-styleable name="LyricView">
+        <attr name="text_size" format="dimension"/>
+        <attr name="text_divider" format="dimension"/>
+        <attr name="normal_color" format="reference|color"/>
+        <attr name="current_color" format="reference|color"/>
+        <attr name="default_label" format="string"/>
+        <attr name="lrc_padding" format="dimension"/>
+        <attr name="timeline_color" format="reference|color"/>
+        <attr name="time_color" format="reference|color"/>
+        <attr name="time_text_size" format="dimension"/>
+        <attr name="text_gravity">
+            <enum name="center" value="0" />
+            <enum name="left" value="1" />
+            <enum name="right" value="2" />
+        </attr>
+    </declare-styleable>
+
+    <declare-styleable name="RikkaRoundRectView">
+        <attr name="roundRatio" format="float" />
+    </declare-styleable>
 </resources>
