--- a/app/src/main/res/layout/activity_play_list.xml
+++ b/app/src/main/res/layout/activity_play_list.xml
@@ -1,91 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appbar"
+    <data>
+
+    </data>
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#ffffff"
-        app:elevation="0dp">
+        android:layout_height="match_parent">
 
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/coll_layout"
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appbar"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:fitsSystemWindows="true"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            android:layout_height="wrap_content"
+            android:background="#ffffff"
+            app:elevation="0dp">
 
-            <ImageView
-                android:id="@+id/iv_cover_bg"
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:id="@+id/coll_layout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/black"
-                android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax" />
+                android:layout_height="300dp"
+                android:fitsSystemWindows="true"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <RelativeLayout
-                android:id="@+id/rl_info"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                app:layout_collapseMode="parallax">
+                <ImageView
+                    android:id="@+id/iv_cover_bg"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    app:layout_collapseMode="parallax" />
 
                 <RelativeLayout
-                    android:id="@+id/rl_playlist_info1"
+                    android:id="@+id/rl_info"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/dp_140"
-                    android:layout_marginTop="@dimen/dp_80">
+                    android:layout_height="match_parent"
+                    app:layout_collapseMode="parallax">
 
+                    <RelativeLayout
+                        android:id="@+id/rl_playlist_info1"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dp_140"
+                      >
+
+
+                    </RelativeLayout>
 
                 </RelativeLayout>
 
-            </RelativeLayout>
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
-                style="@style/ClubToolbar"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_55"
-                android:layout_marginTop="@dimen/dp_30"
-                android:elevation="0dp"
-                app:layout_collapseMode="pin">
-
-                <LinearLayout
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    style="@style/ClubToolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                    android:layout_height="@dimen/dp_55"
+                    android:elevation="0dp"
+                    app:layout_collapseMode="pin">
 
-                </LinearLayout>
-            </androidx.appcompat.widget.Toolbar>
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-    </com.google.android.material.appbar.AppBarLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
 
-    <RelativeLayout
-        android:id="@+id/ll_play"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/bottom_controller"
-        android:background="#ffffff"
-        android:paddingBottom="@dimen/dp_40"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_playlist_song"
+                    </LinearLayout>
+                </androidx.appcompat.widget.Toolbar>
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+        </com.google.android.material.appbar.AppBarLayout>
+        <LinearLayout
+            android:id="@+id/ll_play"
+            android:padding="@dimen/dp_10"
+            android:layout_marginVertical="@dimen/dp_10"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="0dp"
-            android:paddingLeft="@dimen/dp_10"
-            android:paddingRight="@dimen/dp_10" />
-    </RelativeLayout>
+            android:layout_above="@id/bottom_controller"
+            android:background="#ffffff"
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/dp_40"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            <LinearLayout
+                android:id="@+id/header"
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_40">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:text="每日推荐"
+                    android:layout_height="wrap_content"/>
+                <com.liucj.lib_common.view.IconFontTextView
+                    android:layout_width="wrap_content"
+                    android:text="图标"
+                    android:layout_height="wrap_content"/>
 
-    <com.liu.himusic.ui.widget.BottomSongPlayBar
-        android:id="@+id/bottom_controller"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_40"
-        android:layout_alignParentBottom="true"
-        android:background="#ffffff"
-        app:layout_behavior="@string/bottom_sheet_behavior" />
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+            </LinearLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_playlist_song"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="0dp"
+                android:paddingLeft="@dimen/dp_10"
+                android:paddingRight="@dimen/dp_10" />
+        </LinearLayout>
+
+        <com.liu.himusic.ui.widget.BottomSongPlayBar
+            android:id="@+id/bottom_controller"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_40"
+            android:layout_alignParentBottom="true"
+            android:background="#ffffff"
+            app:layout_behavior="@string/bottom_sheet_behavior" />
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+</layout>
