--- a/app/src/main/res/layout/activity_play_list.xml
+++ b/app/src/main/res/layout/activity_play_list.xml
@@ -41,8 +41,7 @@
                     <RelativeLayout
                         android:id="@+id/rl_playlist_info1"
                         android:layout_width="match_parent"
-                        android:layout_height="@dimen/dp_140"
-                      >
+                        android:layout_height="@dimen/dp_140">
 
 
                     </RelativeLayout>
@@ -67,34 +66,45 @@
                 </androidx.appcompat.widget.Toolbar>
             </com.google.android.material.appbar.CollapsingToolbarLayout>
         </com.google.android.material.appbar.AppBarLayout>
+
         <LinearLayout
             android:id="@+id/ll_play"
-            android:padding="@dimen/dp_10"
-            android:layout_marginVertical="@dimen/dp_10"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@id/bottom_controller"
+            android:layout_marginVertical="@dimen/dp_10"
             android:background="#ffffff"
             android:orientation="vertical"
+            android:padding="@dimen/dp_10"
             android:paddingBottom="@dimen/dp_40"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
             <LinearLayout
                 android:id="@+id/header"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_40">
+                android:layout_height="@dimen/dp_40"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/icon_play_all" />
+
                 <TextView
                     android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_5"
                     android:layout_weight="1"
-                    android:text="每日推荐"
-                    android:layout_height="wrap_content"/>
-                <com.liucj.lib_common.view.IconFontTextView
+                    android:text="播放全部" />
+
+                <ImageView
                     android:layout_width="wrap_content"
-                    android:text="图标"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/icon_play_header_select" />
 
             </LinearLayout>
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_playlist_song"
                 android:layout_width="match_parent"
