--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root_layout"
     android:background="@color/black"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <com.liucj.lib_common.view.PPImageView
+        android:fitsSystemWindows="true"
         android:id="@+id/mIvBg"
-        android:scaleType="matrix"
+        android:scaleType="fitCenter"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
@@ -16,8 +18,8 @@
         android:id="@+id/title_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_40"
         android:paddingStart="12dp"
-        android:paddingTop="8dp"
         android:paddingEnd="12dp">
 
         <ImageView
@@ -180,6 +182,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:text="00:00"
+                android:layout_centerVertical="true"
                 android:textColor="@android:color/white"
                 android:textSize="9sp" />
 
@@ -189,22 +192,36 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:text="00:00"
+                android:layout_centerVertical="true"
                 android:textColor="#dddddd"
                 android:textSize="9sp" />
-
-            <SeekBar
+<!--            <SeekBar-->
+<!--                android:id="@+id/progress_view"-->
+<!--                style="?android:attr/progressBarStyleHorizontal"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_centerVertical="true"-->
+<!--                android:layout_toStartOf="@id/total_time_view"-->
+<!--                android:layout_toEndOf="@id/start_time_view"-->
+<!--                android:indeterminate="false"-->
+<!--                android:maxHeight="1dp"-->
+<!--                android:minHeight="1dp"-->
+<!--                android:progressDrawable="@drawable/bg_seekbar"-->
+<!--                android:thumb="@drawable/bg_thumb"  />-->
+            <com.warkiz.widget.IndicatorSeekBar
                 android:id="@+id/progress_view"
-                style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toStartOf="@id/total_time_view"
                 android:layout_toEndOf="@id/start_time_view"
-                android:indeterminate="false"
-                android:maxHeight="1dp"
-                android:minHeight="1dp"
-                android:progressDrawable="@drawable/bg_seekbar"
-                android:thumb="@drawable/bg_thumb"  />
+                app:isb_show_indicator="rounded_rectangle"
+                app:isb_tick_texts_color="@color/color_gray"
+                app:isb_seek_smoothly="true"
+                app:isb_show_tick_marks_type="oval"
+                app:isb_thumb_adjust_auto="false"
+                />
+
         </RelativeLayout>
 
         <LinearLayout
