--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -208,18 +208,15 @@
 <!--                android:minHeight="1dp"-->
 <!--                android:progressDrawable="@drawable/bg_seekbar"-->
 <!--                android:thumb="@drawable/bg_thumb"  />-->
-            <com.warkiz.widget.IndicatorSeekBar
+            <com.warkiz.tickseekbar.TickSeekBar
                 android:id="@+id/progress_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toStartOf="@id/total_time_view"
                 android:layout_toEndOf="@id/start_time_view"
-                app:isb_show_indicator="rounded_rectangle"
-                app:isb_tick_texts_color="@color/color_gray"
-                app:isb_seek_smoothly="true"
-                app:isb_show_tick_marks_type="oval"
-                app:isb_thumb_adjust_auto="false"
+                app:tsb_show_tick_marks_type="oval"
+                app:tsb_show_tick_texts="above"
                 />
 
         </RelativeLayout>
