--- a/app/src/main/res/layout/activity_music_player.xml
+++ b/app/src/main/res/layout/activity_music_player.xml
@@ -74,10 +74,35 @@
 
     </RelativeLayout>
 
-    <com.liu.himusic.ui.widget.IndictorView
+    <FrameLayout
+        android:id="@+id/mRlCenter"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/title_layout" />
+        android:layout_below="@id/title_layout"
+        android:layout_above="@+id/bottom_layout"
+        android:layout_height="wrap_content">
+        <com.liu.himusic.ui.widget.IndictorView
+            android:id="@+id/mIndictorView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+           />
+        <com.liu.himusic.ui.widget.LyricView
+            android:id="@+id/mLyricView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:current_color="#ffffff"
+            app:default_label="暂无歌词，我也不知道怎么上传OvO"
+            app:lrc_padding="@dimen/dp_10"
+            app:normal_color="#808080"
+            app:text_divider="@dimen/dp_15"
+            app:text_gravity="center"
+            app:text_size="@dimen/sp_18"
+            app:time_color="#c5c3c2"
+            app:time_text_size="13sp"
+            app:timeline_color="#4d4948"
+            android:visibility="gone"
+            android:layout_centerInParent="true"/>
+
+    </FrameLayout>
 
 
     <!--底部布局-->
