--- a/app/src/main/res/layout/banner_gallery.xml
+++ b/app/src/main/res/layout/banner_gallery.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="150dp"
     android:id="@+id/container"
-    android:background="#9900"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
@@ -57,6 +56,18 @@
         android:layout_height="wrap_content"
         tools:text="评论"
         android:textColor="@color/color_gray"
+        tools:ignore="MissingConstraints" />
+
+    <ImageView
+        android:id="@+id/shareImage"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="-20dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:rotation="20"
+        tools:src="@drawable/icon_logo"
         tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
